# ai-news-spider

./: .env.example  .gitignore  AGENTS.md  PRD.md  README.md  app.py  bookmarks_2026_4_10.html  crawl4ai_custom_context.md  demo.ts  demo.ts.bak  main.py  mhtml2markdown.py  output.md  pyproject.toml  site_spec.json  url-selector.html
ai_news_spider/: __init__.py  app.py  config.py  crawler.py  db.py  llm.py  models.py  runner.py  runtime.py  scheduler.py  services.py
ai_news_spider/api/: __init__.py  routes.py  schemas.py
ai_news_spider/script_templates/: candidate_runner.py.j2
ai_news_spider/templates/: base.html  index.html  run.html  sites.html  url_selector.html
frontend/: USER_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  styles.css
frontend/src/__tests__/: client.spec.ts  iframe.spec.ts  selector.spec.ts  workflow.spec.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: PagePreview.vue  WorkflowPanel.vue
frontend/src/router/: index.ts
frontend/src/stores/: workflow.ts
frontend/src/types/: jsdom.d.ts
frontend/src/utils/: html.ts  iframe.ts  selector.ts  token.ts
frontend/src/views/: ArticleListView.vue  HomeView.vue  (+1 more)
tests/: api.py  conftest.py  crawl4ai_site_spec_tester.py  helpers.py  mytest.py  test_crawl4ai_article_markdown_live.py  test_db.py  test_live_site_smoke.py  test_models.py  test_pdf_download.py  test_runner.py  test_runtime.py  test_tasks.py  test_web.py  weixin.py
tests/fixtures/: bnu_env_notice.html  chemeng_notice.html  yjsy_list.html
