[project]
name = "ai-news-spider"
version = "0.1.0"
description = "基于 Crawl4AI 的AI新闻列表爬虫"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.8.6",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "markdownify>=1.2.2",
    "openai>=2.31.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
